[package]
name = "harmonic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "harmonic-server"
path = "src/server.rs"

[[bin]]
name = "harmonic-client"
path = "src/client.rs"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync"]} 
tokio-stream = "0.1.17"
chrono = "0.4.42"
notify = "8.2.0"
futures = "0.3.31"
async-stream = "0.3.6"

[build-dependencies]
tonic-prost-build = "0.14.2"
