[package]
name = "harmonic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "harmonic-server"
path = "src/server.rs"

[[bin]]
name = "harmonic-client"
path = "src/client.rs"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "fs"]} 
tokio-stream = "0.1.17"
chrono = "0.4.42"
notify = "8.2.0"
futures = "0.3.31"
async-stream = "0.3.6"
dirs = "6.0.0"
uuid = { "version" = "1.18.1", features = ["serde", "v4"] }
serde = { "version" = "1.0.228" , features = ["derive"] }
toml = "0.9.8"
md5 = "0.8.0"
walkdir = "2.5.0"
serde_json = "1.0.145"
env_logger = "0.11.8"
log = "0.4.28"

[build-dependencies]
tonic-prost-build = "0.14.2"
